Bijayini | #2774 | fix UI breaks on reg page (relationship section) when thr is sequence increment popup

--- a/ui/app/styles/registration/_patientCommonInformation.scss
+++ b/ui/app/styles/registration/_patientCommonInformation.scss
@@ -304,4 +304,8 @@ section.form-field-inline{
   float: left;
 }
 
+.registration-dialog-message{
+  padding: 15px 0 10px;
+}
+
 
